--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "enzyme-to-json": "^3.0.1",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^20.0.4",
     "live-server": "^1.2.0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
+    "path": "^0.12.7",
     "raf": "^3.3.2",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.0",
