--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start" : "node server/server.js",
-    "heroku-postbuild" : "node run build:prod"
+    "heroku-postbuild" : "npm run build:prod"
   },
   "author": "Bruno Flegler DalCol",
   "license": "ISC",
