--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "start" : "node server/server.js",
-    "heroku-postbuild" : "npm run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "Bruno Flegler DalCol",
   "license": "ISC",
@@ -23,13 +23,8 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.0.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
@@ -42,12 +37,19 @@
     "react-modal": "^2.4.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
-    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "validator": "^9.1.2",
-    "webpack": "^3.1.0",
+    "webpack": "^3.1.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
+    "jest": "^20.0.4",
+    "live-server": "^1.2.0",
+    "react-test-renderer": "^16.0.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
