--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "css-loader": "^0.28.4",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^4.9.0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
+    "numeral": "^2.0.6",
     "path": "^0.12.7",
     "raf": "^3.3.2",
     "react": "^16.2.0",
@@ -38,6 +40,8 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.1",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "validator": "^9.1.2",
